# tdt

./: README.md  pyproject.toml
src/tdt/: core.py
